--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -485,6 +485,12 @@ p {
   }
 }
 
+@media screen and (max-width: 575px) {
+  .lh-575-16 {
+    line-height: 16px;
+  }
+}
+
 .px-1367-6 {
   @media screen and (min-width: 1367px) {
     padding-left: 7rem !important;
