--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5508,7 +5508,7 @@ select.list-dt:focus {
     margin: 0px 0px 10px 20px !important;
   }
   .msoaddfinaplan .Generated_Financial_plans_data_box:nth-child(3) {
-    margin: 0px 0px 10px 20px !important;
+    margin: 0px 0px 10px 10px !important;
   }
   .msoaddfinaplan .Generated_Financial_plans_data_box:nth-child(5) {
     margin: 0px 0px 10px 20px !important;
@@ -10138,4 +10138,11 @@ select.list-dt:focus {
   color: #212529;
   text-shadow: unset;
   opacity: 1;
+}
+
+@media screen and (max-width: 370px) {
+  
+  .modelstyl2 .msoaddfinaplan .Generated_Financial_plans_data_box h3{
+    min-height:32px;
+  }
 }
