--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -109,6 +109,10 @@ p {
   font-size: 32px !important;
 }
 
+.fs-30 {
+  font-size: 30px !important;
+}
+
 .fs-24 {
   font-size: 24px !important;
 }
