--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -135,6 +135,10 @@ p {
   font-size: 14px !important;
 }
 
+.fs-13 {
+  font-size: 13px !important;
+}
+
 .fs-12 {
   font-size: 12px !important;
 }
@@ -376,6 +380,12 @@ p {
 .fs-575-14 {
   @media screen and (max-width: 575px) {
     font-size: 14px !important;
+  }
+}
+
+.fs-575-13 {
+  @media screen and (max-width: 575px) {
+    font-size: 13px !important;
   }
 }
 
