--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9059,7 +9059,7 @@ select.list-dt:focus {
   }
 
   .makepaymentmodel_p1_s7 {
-    margin-top: 120px;
+    margin-top: 220px;
   }
 
   .makepaymentmodel_p1_s6 {
@@ -10172,4 +10172,14 @@ select.list-dt:focus {
   .slider-pips__float.slider-pips__float--1:nth-last-child(2)
   span.msorimghov {
   opacity: 1;
+}
+
+@media screen and (max-width: 1023px) and (min-width: 768px){
+  .makepaymentmodel_p1 {
+margin-top: 6rem;
+  }
+
+  .makepaymentmodel_p1_s7 {
+    margin-top: 220px;
+  }
 }
