--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5583,6 +5583,7 @@ select.list-dt:focus {
   }
   .withdrawalmony_box1 {
     padding: 15px;
+    padding-left: 30px;
     margin-right: 10px;
     width: calc(50% - 10px);
   }
@@ -5623,6 +5624,7 @@ select.list-dt:focus {
     margin-right: 0px;
     width: calc(50% - 0px);
     padding: 15px;
+    padding-left: 30px;
   }
   .withdrawalmony_p2 {
   }
@@ -5873,7 +5875,7 @@ select.list-dt:focus {
 
   .msopiechartlabel_data_label h4 {
     text-align: center;
-    font-size: 16px;
+    font-size: 18px;
   }
   .cute {
     width: calc(100% - 20px);
@@ -5965,6 +5967,13 @@ select.list-dt:focus {
   /* .fieldset_data.st1.st2{max-height:calc(100%)} */
   .st2 .msoinvestproduct .tab-pane {
     max-height: unset;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  
+  .msopiechartlabel_data_label h4 {
+ font-size: 16px;   
   }
 }
 
@@ -6505,7 +6514,7 @@ select.list-dt:focus {
     font-size: 16px;
   }
   .withdrawalmony_p2 .mskalasd1 h3 {
-    font-size:36px;
+    font-size: 36px;
     height: 40px;
     margin-top: 4px;
   }
@@ -6522,7 +6531,7 @@ select.list-dt:focus {
     bottom: 67px;
   }
   .withdrawalmony {
-    padding: 0px 50px;
+    padding: 0px 24px;
     /* padding: 0px 0px; */
   }
   .withdrawalmony_p1_s1 {
