--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5634,7 +5634,7 @@ select.list-dt:focus {
   }
   .withdrawalmony_p2 a {
     font-size: 14px;
-    line-height: 15px;
+    line-height: 18px;
     max-width: 50px;
     margin: 0px auto;
     text-align: left;
@@ -10231,8 +10231,14 @@ select.list-dt:focus {
 }
 
 @media screen and (max-width: 1023px) {
-  
   .msoinvestproduct_box_right .body {
- margin-top: 8px;   
+    margin-top: 8px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  
+  .mskalasd1 h3 {
+    letter-spacing: 0.2px;
   }
 }
