--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -444,7 +444,8 @@ select.list-dt:focus {
 }
 
 #progressbar {
-  margin-bottom: 24px;
+  /* margin-bottom: 24px; */
+  margin-bottom: 40px;
   overflow: hidden;
   color: lightgrey;
   display: flex;
@@ -3036,6 +3037,7 @@ select.list-dt:focus {
   float: left;
   width: 100%;
   padding-bottom: 150px;
+  top: 1rem;
 }
 .msopiechartlabel_data_label h4 {
   font-size: 16px;
