--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4461,6 +4461,25 @@ select.list-dt:focus {
   border-bottom: 2px solid #f2f2f2;
   height: 47px;
 }
+
+@media screen and (min-width: 1024px) {
+  .withdrawalmony_p2 #myTabs li {
+    height: 42px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .withdrawalmony_p2 #myTabs li {
+    height: 41px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .withdrawalmony_p2 #myTabs li {
+    height: 30px;
+  }
+}
+
 .withdrawalmony_p2 #myTabs li a.active {
   border-bottom: 2px solid #ffc32c;
   color: #ffc32c !important;
@@ -9469,7 +9488,7 @@ select.list-dt:focus {
 @media screen and (max-width: 575px) {
   .withdrawalmony_p1 {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 
   .withdrawalmony_p1 .withdrawalmony_box1,
