--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9032,7 +9032,7 @@ select.list-dt:focus {
 }
 
 #exampleModal4.modal .modal-dialog .modal-content {
-  height: 100%;
+  height: 100% !important;
 }
 
 @media screen and (max-width: 1023px) {
